# homescope

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  metrics.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  etl-refresh.yml
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/scripts/: build-states-geojson.mjs
apps/web/src/app/: globals.css  (+4 more)
docs/: DEPLOY.md  architecture.md  data-dictionary.md
docs/superpowers/plans/: 2026-06-21-homescope-m0-skeleton.md  2026-06-21-homescope-m1-data-model.md  2026-06-21-homescope-m2-etl-resilience.md  2026-06-21-homescope-m3-choropleth.md  2026-06-21-homescope-m4-detail-panel.md  2026-06-21-homescope-m5-search-states.md  2026-06-21-homescope-m6-brand-deploy.md
etl/: README.md  pyproject.toml
etl/homescope_etl/: __init__.py  __main__.py  db.py
etl/homescope_etl/generate/: __init__.py  generator.py  load.py  model.py
etl/homescope_etl/geometry/: __init__.py  load.py  sources.py
etl/homescope_etl/neon/: __init__.py  export.py
etl/homescope_etl/pipeline/: __init__.py  adapter.py  contracts.py  errors.py  normalize.py  run.py  validate.py
etl/homescope_etl/pipeline/sources/: __init__.py  broken.py  synthetic.py
etl/homescope_etl/tiles/: __init__.py  build.py
etl/tests/: test_contracts.py  test_generator.py  test_pipeline_db.py  test_sources.py  test_synthetic_source.py  test_validation.py
infra/: Dockerfile.etl  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
scripts/: upload-tiles-blob.mjs
(+25 files in other folders)
